# python-wordsegment

./: .gitignore  .pylintrc  pyproject.toml  tox.ini
.github/workflows/: ci.yml
docs/: conf.py  index.rst
tests/: test_coverage.py
wordsegment/: __init__.py
