[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wordsegment"
version = "1.3.2"
description = "English word segmentation."
readme = "README.rst"
authors = [
    { name = "Grant Jenks", email = "contact@grantjenks.com" }
]
license = { file = "LICENSE" }
requires-python = ">=3.6"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
]
dependencies = []

[tool.hatch.build]
include = [
    "wordsegment/**",
    "README.rst",
    "LICENSE"
]

[project.urls]
Homepage = "http://www.grantjenks.com/docs/wordsegment/"

lint = ["pylint==1.6.4"]
# build = ["wheel==0.29.0"]

[tool.hatch.envs.dev]
dependencies = [
    "pytest",
    "coverage==4.2",
    "tox==2.5.0",
    "pylint==1.6.4",
    "Sphinx==1.5.1",
]
features = ["docs", "test", "lint", "build"]

[tool.hatch.envs.test]
dependencies = [
    "pytest",
    "coverage==4.2"
]
