[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wordsegment"
version = "1.3.2"
description = "English word segmentation."
readme = "README.rst"
authors = [
    { name = "Grant Jenks", email = "contact@grantjenks.com" }
]
license = { file = "LICENSE" }
requires-python = ">=3.6"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
]
dependencies = []

[tool.hatch.build]
include = [
    "wordsegment/**",
    "README.rst",
    "LICENSE"
]

[project.urls]
Homepage = "http://www.grantjenks.com/docs/wordsegment/"

[tool.hatch.envs.dev]
dependencies = [
    "pytest",
    "coverage==4.2",
    "tox==2.5.0"
]
features = ["docs", "test"]

[tool.hatch.envs.test]
dependencies = [
    "pytest",
    "coverage==4.2"
]

[tool.hatch.envs.lint]
dependencies = [
  "pylint"
]

[tool.hatch.envs.lint.scripts]
lint = "pylint wordsegment"

[tool.hatch.envs.docs]
dependencies = [
    "Sphinx>=7.0.0"
]

[tool.hatch.envs.docs.scripts]
build = "sphinx-build -b html docs docs/_build/html"
