[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wordsegment"
version = "1.3.2"
description = "English word segmentation."
readme = "README.rst"
authors = [
    { name = "Grant Jenks", email = "contact@grantjenks.com" }
]
license = { file = "LICENSE" }
requires-python = ">=3.6"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
]
dependencies = []

[tool.hatch.build]
include = [
    "wordsegment/**",
    "README.rst",
    "LICENSE"
]

[project.urls]
Homepage = "http://www.grantjenks.com/docs/wordsegment/"

[tool.hatch.envs.dev]
dependencies = [
    "tox==2.5.0"
]
features = ["docs", "test"]

[tool.hatch.envs.test]
matrix = [
  { python = ["3.7"] },
  { python = ["3.8"] },
  { python = ["3.9"] },
  { python = ["3.10"] },
  { python = ["3.11"] },
  { python = ["3.12"] },
  { python = ["3.13"] },
]
dependencies = [
    "pytest",
    "coverage"
]

[tool.hatch.envs.test.scripts]
test = "pytest"
cover = "coverage run -m pytest"


[tool.hatch.envs.lint]
dependencies = [
  "pylint>=3.3.8"
]

[tool.hatch.envs.lint.scripts]
lint = "pylint wordsegment"

[tool.hatch.envs.docs]
dependencies = [
    "Sphinx>=7.0.0"
]

[tool.hatch.envs.docs.scripts]
build = "sphinx-build -b html docs docs/_build/html"
